edited the Home and the projects & added proj pics

--- a/WebDev/3A-WebDev/templates/Hola10/index.html
+++ b/WebDev/3A-WebDev/templates/Hola10/index.html
@@ -75,9 +75,10 @@
                 <h3>Hello There</h3>
 
                 <h1>
-                    I am Jonathan Doe. <br>
-                    I am a graphic & UI/UX <br>
-                    designer based in Somewhere.
+                    We are <br>
+                    Omer Shachar & Aviv Itzak. <br>
+                    Students in Ruppin college, <br>
+                    coders and future builders. <br>
                 </h1>
 
                 <div class="home-content__buttons">
@@ -269,7 +270,7 @@
                 <h3>Portfolio</h3>
                 <h1>See My Latest Projects.</h1>
                 
-                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
+                <p class="lead">Omer projects</p>
             </div>
         </div>
 
@@ -280,28 +281,31 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-beetle.jpg" class="thumb-link" title="The Beetle Car" data-size="1050x700">
-                                <img src="images/portfolio/beetle.jpg" 
-                                     srcset="images/portfolio/beetle.jpg 1x, images/portfolio/beetle@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/PongWithIssuesPics/Home.png" class="thumb-link" title="PongWithIssues" data-size="1050x700">
+                                <img src="images/portfolio/PongWithIssuesPics/Home.png" 
+                                     srcset="images/portfolio/PongWithIssuesPics/Home.png, images/portfolio/PongWithIssuesPics/Home.png" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                The Beetle
+                                Pong With Issues
                             </h3>
                             <p class="item-folio__cat">
-                                Web Development
+                                It compiles. That's enough.
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="https://github.com/omershachar/PongWithIssues" class="item-folio__project-link" title="Project link">
                             <i class="im im-link"></i>
                         </a>
 
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>
+                                A modular Python-based Pong game: classic + physics-based versions, with realistic physics, spin, effects, and a shared menu — for fun & for learning OOP/physics.
+                            </p>
+                            <a href="https://github.com/omershachar/PongWithIssues">Click To Play</a>
                         </div>
 
                     </div> <!-- end item-folio -->
