--- a/WebDev/3A-WebDev/templates/Hola10/index.html
+++ b/WebDev/3A-WebDev/templates/Hola10/index.html
@@ -128,50 +128,53 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full text-center">
                 <h3>About</h3>
-                <h1>More About Me</h1>
-                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
+                <h1>More About U</h1>
+                <p class="lead">We are two computer science students who have always had a natural passion for technology. One of us served in the army as an IT specialist, where he was exposed to the world of computers and coding on a deeper level, and today works in IT in a civilian company. The other works in QA, with a strong interest in automation, testing, and improving software quality. Together,
+                we share a love for technology, continuous learning, and building tools that help solve real-world problems.</p>
             </div>
         </div>
 
         <div class="row about-content">
 
             <div class="col-six tab-full left">
-                <h3>Howdy!</h3>
+                <h3>⭐ These Days!</h3>
 
-                <p>Lorem ipsum Ut eiusmod ex magna sit dolor esse adipisicing minim ad cupidatat eu veniam nostrud mollit laboris sunt magna velit culpa consectetur nostrud consectetur labore sed do.</p>
+                <p>These days, we are in our second year of our Computer Science degree, continuing to expand our knowledge and technical skills.
+                We have experience with languages such as C and C#, and have also been introduced to Python. At the moment,
+                we are focusing on Java, alongside core web technologies like HTML, CSS, and JavaScript. As we progress,
+                we’re constantly exploring new concepts, strengthening our problem-solving abilities,
+                and building a solid foundation for both software development and future specialization in the tech world.</p>
 
-                <p>
-                Lorem ipsum Nisi officia Duis irure voluptate dolor commodo pariatur occaecat aliquip adipisicing voluptate Ut in qui ea sint occaecat in commodo in in in incididunt ut sunt in Ut Duis in ut ex qui anim cupidatat cupidatat ex in non dolore labore ea amet cillum ea qui dolor nisi sed velit mollit exercitation ex fugiat labore in deserunt culpa laborum culpa anim dolore laboris amet irure mollit proident velit fugiat aute ea elit magna consequat qui officia quis elit Duis dolor esse cupidatat tempor proident voluptate aliqua ex cupidatat do eiusmod veniam irure laborum ut magna nostrud dolore ullamco commodo elit sit magna aliqua laborum veniam officia dolor.	
-                </p>
+ 
             </div>
 
             <div class="col-six tab-full right">
-                <h3>I've Got Some skills.</h3>
+                <h3>We Have Got Some skills.</h3>
 
                 <ul class="skill-bars">
                     <li>
-                    <div class="progress percent90"><span>90%</span></div>
+                    <div class="progress percent70"><span>70%</span></div>
                     <strong>HTML5</strong>
                     </li>
                     <li>
-                    <div class="progress percent85"><span>85%</span></div>
+                    <div class="progress percent60"><span>60%</span></div>
                     <strong>CSS3</strong>
                     </li>
                     <li>
-                    <div class="progress percent70"><span>70%</span></div>
-                    <strong>JQuery</strong>
+                    <div class="progress percent65"><span>65%</span></div>
+                    <strong>JS</strong>
                     </li>
                     <li>
-                    <div class="progress percent95"><span>95%</span></div>
-                    <strong>PHP</strong>
+                    <div class="progress percent80"><span>80</span></div>
+                    <strong>C#</strong>
                     </li>
                     <li>
                     <div class="progress percent75"><span>75%</span></div>
-                    <strong>Wordpress</strong>
+                    <strong>JAVA</strong>
                     </li>   
                     <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>Angular JS</strong>
+                    <div class="progress percent70"><span>70%</span></div>
+                    <strong>C</strong>
                     </li>   
                 </ul>
             </div>
