--- a/WebDev/3A-WebDev/templates/Hola10/index.html
+++ b/WebDev/3A-WebDev/templates/Hola10/index.html
@@ -543,7 +543,7 @@
 
         <div class="row testimonials-header">
             <div class="col-full">
-                <h1 class="h02">What People Say.</h1>
+                <h1 class="h02">What Real People Really Say.</h1>
             </div>
         </div>
 
@@ -552,32 +552,29 @@
             <div class="col-full testimonials__slider">
 
                 <div class="testimonials__slide">
-                    <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
-                    <p>Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum. 
-                    Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.</p>
+                    <img src="images/avatars/Shahaf.png" alt="Author image" class="testimonials__avatar">
+                    <p>I would never make it this far without them. <br>Thank you.</p>
                     <div class="testimonials__author h06">
-                        Tim Cook
-                        <span>CEO, Apple</span>
+                        Shahaf
+                        <span>Computer science student, Ruppin</span>
                     </div>
                 </div>
 
                 <div class="testimonials__slide">
-                    <img src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
-                    <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                    Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
+                    <img src="images/avatars/Mike.png" alt="Author image" class="testimonials__avatar">
+                    <p>That Pong With Issues was beautiful. I cried.</p>
                     <div class="testimonials__author h06">
-                        Sundar Pichai
-                        <span>CEO, Google</span>
+                        Mike
+                        <span>Computer science student, Ruppin</span>
                     </div>
                 </div>
 
                 <div class="testimonials__slide">
-                    <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
-                    <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.  
-                    Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.</p>
+                    <img src="images/avatars/Nati.png" alt="Author image" class="testimonials__avatar">
+                    <p>Program me!</p>
                     <div class="testimonials__author h06">
-                        Satya Nadella
-                        <span>CEO, Microsoft</span>
+                        Nati
+                        <span>Former computer science student, Ruppin</span>
                     </div>
                 </div>
                 
