--- a/WebDev/3A-WebDev/templates/Hola10/index.html
+++ b/WebDev/3A-WebDev/templates/Hola10/index.html
@@ -76,7 +76,7 @@
 
                 <h1>
                     We are <br>
-                    Omer Shachar & Aviv Itzak. <br>
+                    Omer Shachar & Aviv Itzhak. <br>
                     Students in Ruppin college, <br>
                     coders and future builders. <br>
                 </h1>
@@ -105,16 +105,13 @@
                 <a href="#"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
+                <a href="#"><i class="im im-twitter" aria-hidden="true"></i><span>Twitter</span></a>
             </li>
             <li>
                 <a href="#"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
-            </li>
-            <li>
-                <a href="#"><i class="im im-pinterest" aria-hidden="true"></i><span>Pinterest</span></a>
+                <a href="https://youtu.be/dQw4w9WgXcQ?si=HPmhiss2GzL71xw7"><i class="im im-pinterest" aria-hidden="true"></i><span>RickIt</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
