--- a/WebDev/3A-WebDev/templates/Hola10/index.html
+++ b/WebDev/3A-WebDev/templates/Hola10/index.html
@@ -453,32 +453,7 @@
 
     </section> <!-- end s-blog -->
 
-
-    <!-- s-cta
-    ================================================== -->
-    <section class="s-cta">
-        
-        <div class="row narrow cta">
-
-            <div class="col-full cta__content">
-
-                <h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Styleshout Recommends Dreamhost.</a></h2>
-
-                <p class="lead">
-                Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">DreamHost</a>.
-                Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>.
-                </p>
-
-                <div class="cta__action">
-                    <a class="btn btn--primary btn--large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Sign Up Now</a>
-                </div>	
-
-            </div>
-
-        </div> <!-- end cta -->
-        
-    </section>
-
+    
 
     <!-- s-stats
     ================================================== -->
@@ -487,30 +462,30 @@
 
             <div class="col-block stats__col ">
                 <div class="stats__count">
-                    128
+                    10
                 </div>
-                <h4>Awards Received</h4>
+                <h4>Courses Completed</h4>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">
-                    1500
+                    6
                 </div>
-                <h4>Cups of Coffee</h4>
+                <h4>Programming Languages</h4>
             </div>
             <div class="col-block stats__col stats__col--highlight">
                 <div class="stats__upsign">
                     <a href="#"><i class="im im-arrow-up" aria-hidden="true"></i></a>
                 </div>
                 <div class="stats__count">
-                    110
+                    46537
                 </div>
-                <h4>Projects Completed</h4>
+                <h4>Cups of Coffee</h4>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">
-                    101
+                    999999
                 </div>
-                <h4>Happy Clients</h4> 
+                <h4>Hours Spent Debugging</h4> 
             </div>
 
         </div>
