edited the blog section

--- a/WebDev/3A-WebDev/templates/Hola10/index.html
+++ b/WebDev/3A-WebDev/templates/Hola10/index.html
@@ -372,10 +372,8 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
                 <h3>Journal</h3>
-                <h1>Latest From The Blog.</h1>
-                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute. 
-                Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum 
-                ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
+                <h1>Latest Tech Shit that we like.</h1>
+                <p class="lead">Blog staff. Maybe put articles here that we like?</p>
             </div>
         </div>
 
@@ -391,7 +389,7 @@
                         
                         <h2 class="h01"><a href="blog-single.html">The 10 Golden Rules of Clean Simple Design.</a></h2>
                         <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh..
+                        Article summary...
                         </p>
 
                         <div class="blog-cat">
