--- a/WebDev/3A-WebDev/templates/Hola10/index.html
+++ b/WebDev/3A-WebDev/templates/Hola10/index.html
@@ -586,25 +586,36 @@
                     <a class="footer-site-logo" href="#0"><img src="images/logo.png" alt="Homepage"></a>
                 </div>-->
                 <div class="flex-container">
-                    <div>
+                    <div class="profile-box">
                         <img src="images/profile images/Aviv profile.jpg" class="profile-img" />
-                    </div>
-                    <br>
-                    <div>
-                        <i class="fa-brands fa-github icons"></i>
-                        <span>Git</span>
+                        <div class="icons" >
+                        <div>
+                            <a href="https://github.com/aviv-itzhak"><i class="fa-brands fa-github"></i><span>Git</span></a>
+
+                        </div>
+                           <div>
+                               <a href="www.linkedin.com/in/aviv-itzhak-904554174"> <i class="fa-brands fa-linkedin"></i></a>
+                           </div>
+                        </div>
                     </div>
 
-                    <div>
+                    <div class="line"></div>
+
+                    <div class="profile-box">
                         <img src="images/profile images/WhatsApp Image 2025-11-30 at 20.55.38_d046f840.jpg" class="profile-img" />
-                    </div>
-                    <br>
-                    <div>
+                        <div class="icons" >
+                            <div>
+                                <a href="https://github.com/omershachar"><i class="fa-brands fa-github"></i> <span>Git</span></a>
 
-                        <i class="fa-brands fa-github icons"></i>
-                        <span>Git</span>
-                    </div>
+                            </div>
+                         <div>
 
+                             <a href="www.linkedin.com/in/aviv-itzhak-904554174"> <i class="fa-brands fa-linkedin"></i></a>
+                         </div>
+
+
+                        </div>
+                    </div>
                 </div>
                 
                 <!--<ul class="footer-social">
