--- a/WebDev/3A-WebDev/templates/Hola10/css/main.css
+++ b/WebDev/3A-WebDev/templates/Hola10/css/main.css
@@ -3044,7 +3044,7 @@ html.no-csstransitions .home-content__main {
 
 .s-contact {
     background-color: #151515;
-    background-image: url("../images/contact-bg.jpg");
+    background-image: url("../images/vecteezy_digital-cyberspace-with-digital-data-network-connections_1971012.jpg");
     background-repeat: no-repeat;
     background-position: center, center;
     padding-top: 13.2rem;
