--- a/WebDev/3A-WebDev/templates/Hola10/index.html
+++ b/WebDev/3A-WebDev/templates/Hola10/index.html
@@ -65,7 +65,7 @@
 
    <!-- home
    ================================================== -->
-   <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+   <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/homePagePhoto.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
@@ -310,7 +310,11 @@
                             <a href="https://github.com/omershachar/PongWithIssues">Click To Play</a>
                         </div>
 
+
                     </div> <!-- end item-folio -->
+
+
+
                 </div> <!-- end masonry__brick -->
 
             </div>
@@ -617,30 +621,6 @@
                         </div>
                     </div>
                 </div>
-                
-                <!--<ul class="footer-social">
-                    <li><a href="#0">
-                        <i class="fa-brands fa-github"></i>
-                        <span>Git</span>
-                    </a></li>
-                    <li><a href="#0">
-                        <i class="im im-twitter" aria-hidden="true"></i>
-                        <span>Twitter</span>
-                    </a></li>
-                    <li><a href="#0">
-                        <i class="im im-instagram" aria-hidden="true"></i>
-                        <span>Instagram</span>
-                    </a></li>
-                    <li><a href="#0">
-                        <i class="im im-behance" aria-hidden="true"></i>
-                        <span>Behance</span>
-                    </a></li>
-                    <li><a href="#0">
-                        <i class="im im-pinterest" aria-hidden="true"></i>
-                        <span>Pinterest</span>
-                    </a></li>
-                </ul>-->
-                    
             </div>
         </div>
 
@@ -648,8 +628,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Hola 2017</span> 
-                    <span>Design by <a href="https://www.styleshout.com/">styleshout</a></span>	
+                    <span>Designed by two students running on caffeine and hope © 2025 </span>
                 </div>
 
                 <div class="go-top">
