change footer color

--- a/WebDev/3A-WebDev/Hola10/css/main.css
+++ b/WebDev/3A-WebDev/Hola10/css/main.css
@@ -3310,6 +3310,7 @@ footer {
     padding: 6.6rem 0 4.2rem;
     text-align: center;
     color: rgba(255, 255, 255, 0.2);
+    background-color: #3A0E0E;
 }
 
 footer a, footer a:visited {
