--- a/WebDev/3A-WebDev/Hola10/css/iconic/StyleSheet.css
+++ b/WebDev/3A-WebDev/Hola10/css/iconic/StyleSheet.css
@@ -2,7 +2,20 @@
 .big_font{font-size:large; line-height:2.5 }
 .profile-img{width:80px; height:80px; border-radius:50%; border:3px solid white; margin-left:40px; margin-right:40px; }
 .flex-container{display:flex; align-items:center; justify-content:center; flex-wrap:wrap; }
-.icons{color: white; margin-top:20px; }
+.icons{margin-top:20px;}
+
+.icons a,
+.icons a i,
+.icons a span{color: white; }
+
+/*change hover color*/
+.icons a:hover,
+.icons a:hover i,
+.icons a:hover span
+{color: #d46a6a}
+
+
+
 .profile-box {display: flex; flex-direction: column;  align-items: center;}
 .line{width: 1px; background-color: white; height: 100px; }
 
