projects photo size change

--- a/WebDev/3A-WebDev/Hola10/css/main.css
+++ b/WebDev/3A-WebDev/Hola10/css/main.css
@@ -2385,7 +2385,8 @@ html.no-csstransitions .home-content__main {
 
 .masonry__brick {
     float: left;
-    padding: 0;
+    padding: 20px;
+
 }
 
 .item-folio {
