--- a/WebDev/3A-WebDev/Hola10/css/iconic/StyleSheet.css
+++ b/WebDev/3A-WebDev/Hola10/css/iconic/StyleSheet.css
@@ -16,8 +16,7 @@
 
 .picksImg{border-radius: 10%; width: 320px; height: 320px; object-fit: cover; padding-bottom: 20px;}
 
-
-/*#blog article:nth-child(2) img {border-radius: 10%; width: 320px; height: 320px; display: block;margin: 0 auto; object-fit: cover;}*/
+#works img {width: 400px; height: 400px;}
 
 .profile-box {display: flex; flex-direction: column;  align-items: center;}
 .line{width: 1px; background-color: white; height: 100px; }
