changed tags names & improved style

--- a/WebDev/5A-WebDev/styles/global.css
+++ b/WebDev/5A-WebDev/styles/global.css
@@ -1,19 +1,52 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
     direction: ltr;
-    padding: 2px;
+    font-family: Arial, Helvetica, sans-serif;
     color: black;
-    background-color: rgb(240, 187, 96);
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    min-height: 100vh;
+    line-height: 1.6;
     text-align: center;
     box-sizing: border-box;
+    padding: 0;
 }
 
 .container {
     max-width: 1200px;
     margin: auto;
-    padding: auto;
-    font-size: medium;
     gap: 1em;
+}
+
+/* general page elements design that are inside the .container */
+
+.page-header {
+    background: whitesmoke;
+    padding: 10px 15px;
+    margin: 20px 5px;
+    border-radius: 15px;
+    font-size: 1rem;
+    box-shadow: 0 2px 4px rgb(0, 0, 0, 1);
+    text-align: center;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.grid-container .card {
+    background-color: whitesmoke;
+    padding: 1rem;
+    box-shadow: 0 2px 4px rgb(0, 0, 0, 1);
+    border-radius: 8px;
+    font-size: 1rem;
+}
+
+@media screen and (max-width: 960px) {
+    .container {
+        grid-template-columns: 1fr;
+    }
 }
 
 /* navbar style */
@@ -39,30 +72,4 @@ body {
 
 .navbar li {
     float: inline-start;
-}
-
-/* general page elements design that are inside the .container */
-.page-header {
-    background: whitesmoke;
-    padding: 10px 15px;
-    margin: 20px 5px;
-    border-radius: 15px;
-    /* font-size: 2rem; */
-    text-align: center;
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-
-    /* grid-template-columns: 1fr 1fr; */
-    /* grid-template-rows: 1fr 1fr; */
-    gap: 1em;
-}
-
-.grid-container .card {
-    padding: 2em;
-    background-color: whitesmoke;
-    border-radius: 8px;
-    /* font-size: 2rem; */
 }
