--- a/WebDev/5A-WebDev/styles/categories.css
+++ b/WebDev/5A-WebDev/styles/categories.css
@@ -1,6 +1,9 @@
 body{
     background-image: url("/images/backgroud image.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: "Segoe Script", serif;
+
 }
 
 .grid-container{
@@ -10,14 +13,17 @@ body{
     justify-items: center;
     row-gap: 20px;
 
+
 }
 
 .grid-container>div{
     border-radius: 30px;
     width: min(90%, 600px);
     padding: 0.2rem;
-    background: rgba(255, 255, 255, 0.35);
-    backdrop-filter: blur(10px);
+    cursor: pointer;
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(6px);
+    box-shadow: 0 10px 30px rgba(0,0,0,0.15);
 
 
 }
@@ -25,12 +31,45 @@ body{
     box-shadow: 0 14px 50px rgba(0,0,0, 1);
 }
 
-.title{font-size: 50px}
+.title{
+    color: rgba(43, 5, 38, 0.85);
+    font-weight: 500;
+    text-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+    font-size: 60px;
+    font-family: "Times New Roman", serif;
+}
 
 .back-arrow{
     position: fixed;
     top:20px;
     left:20px;
+
+}
+
+.chooseFile{
+    font-family: "Segoe UI", sans-serif;
+    font-size: 1.3rem;
+
+}
+
+.grid-container h2{
+    color: rgba(70, 20, 61, 0.85);
+}
+
+.miniAlert{
+    position: fixed;
+    bottom: 350px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    background: rgba(40, 20, 70, 0.9);
+    color: white;
+    font-family: "Times New Roman", serif;
+    border-radius: 14px;
+    font-size: 20px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    opacity: 1;
+    z-index: 9999;
 }
 
 
