--- a/WebDev/5A-WebDev/styles/orders.css
+++ b/WebDev/5A-WebDev/styles/orders.css
@@ -16,6 +16,7 @@ body{
     border-radius: 40px;
     width: 1200px;
     color: rgba(70, 20, 61, 0.85);
+    overflow: hidden; /* cuts everything that goes out from the borders*/
 
 }
 table {
@@ -40,3 +41,29 @@ h1{
     font-size: 60px;
     font-family: "Times New Roman", serif;
 }
+
+
+.chooseFileLeft{
+    position: fixed;
+    top: 50px;
+    left: 5px;
+    font-family: "Times New Roman", serif;
+    font-size: 1.1rem;
+
+}
+.chooseFileCenter {
+    position: fixed;
+    top: 30%;
+    left: 42%;
+    font-family: "Times New Roman", serif;
+    font-size: 1.5rem;
+}
+
+.noOrders{
+    font-family: "Times New Roman", serif;
+    font-size: 2.5rem;
+
+
+
+}
+
