--- a/WebDev/5A-WebDev/styles/categories.css
+++ b/WebDev/5A-WebDev/styles/categories.css
@@ -39,18 +39,6 @@ body{
     font-family: "Times New Roman", serif;
 }
 
-.back-arrow{
-    position: fixed;
-    top:20px;
-    left:20px;
-
-}
-
-.chooseFile{
-    font-family: "Times New Roman", serif;
-    font-size: 1.3rem;
-
-}
 
 .grid-container h2{
     color: rgba(70, 20, 61, 0.85);
@@ -70,6 +58,25 @@ body{
     box-shadow: 0 10px 30px rgba(0,0,0,0.3);
     opacity: 1;
     z-index: 9999;
+}
+
+.back-arrow{
+    position: absolute;
+    top:20px;
+    left:20px;
+
+}
+
+@media (max-width: 480px) {
+
+    .title {
+        font-size: 2.5rem;
+    }
+    .back-arrow{
+        top:5px;
+        left:5px;
+    }
+
 }
 
 
