--- a/WebDev/5A-WebDev/styles/orders.css
+++ b/WebDev/5A-WebDev/styles/orders.css
@@ -18,6 +18,7 @@ body{
     color: rgba(70, 20, 61, 0.85);
     overflow: hidden; /* cuts everything that goes out from the borders*/
 
+
 }
 table {
     width: 100%;
@@ -27,12 +28,14 @@ table {
 th, td {
     padding: 12px;
     border-bottom: 3px solid rgba(255,255,255,0.18);
+
 }
 
 th {
-    position: sticky; top: 0;
+    position: sticky;
+    top: 0;
     font-size: 30px;
-    }
+}
 
 h1{
     color: rgba(43, 5, 38, 0.85);
@@ -43,27 +46,52 @@ h1{
 }
 
 
-.chooseFileLeft{
-    position: fixed;
-    top: 50px;
-    left: 5px;
-    font-family: "Times New Roman", serif;
-    font-size: 1.1rem;
-
-}
-.chooseFileCenter {
-    position: fixed;
-    top: 30%;
-    left: 42%;
-    font-family: "Times New Roman", serif;
-    font-size: 1.5rem;
-}
-
 .noOrders{
     font-family: "Times New Roman", serif;
-    font-size: 2.5rem;
-
-
+    font-size: 2.2rem;
+    font-weight: bold;
+}
+.back-arrow{
+    position: absolute;
+    top:20px;
+    left:20px;
 
 }
+
+@media(max-width:480px){
+    body{
+        display: block;
+    }
+
+    .noOrders{
+        font-size: 1.6rem;
+        font-weight: bold;
+    }
+  .container{
+      width: 100%;
+      margin: 0;
+      border-radius: 24px;
+
+
+  }
+
+ th{
+     font-size: 1.4rem;
+
+ }
+ tr{
+     font-size: 1.0rem;
+
+ }
+
+    .back-arrow{
+        top:5px;
+        left:5px;
+
+    }
+
+}
+
+
+
 
