--- a/WebDev/5A-WebDev/styles/dashboard.css
+++ b/WebDev/5A-WebDev/styles/dashboard.css
@@ -1,14 +1,9 @@
-body{
+
+body {
     background-image: url("/images/mainScreen.png");
     background-repeat: no-repeat;
     background-size: cover;
-    font-family: "Segoe Script", serif;
-
-}
-
-body {
     direction: ltr;
-    font-family: Arial, Helvetica, sans-serif;
     color: black;
     min-height: 100vh;
     line-height: 1.6;
@@ -27,16 +22,6 @@ body {
 
 .page-header {
 
-    /* padding: 10px 15px;
-     margin: 20px 5px;
-     border-radius: 15px;
-     font-size: 1rem;
-     text-align: center;
-
-     background: rgba(255, 255, 255, 0.25);
-     backdrop-filter: blur(6px);
-     box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-     transition: transform 0.25s ease, box-shadow 0.25s ease;*/
 }
 
 .grid-container {
@@ -47,11 +32,26 @@ body {
 }
 
 .grid-container .card {
-    background-color: whitesmoke;
+    color: rgba(43, 5, 38, 0.85);
+    font-weight: 500;
+    text-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+    font-family: "Times New Roman", serif;
     padding: 1rem;
-    box-shadow: 0 2px 4px rgb(0, 0, 0, 1);
-    border-radius: 8px;
-    font-size: 1rem;
+    border-radius: 30px;
+    font-size: 1.3rem;
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(6px);
+    box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+    transition: transform 0.25s ease, box-shadow 0.25s ease;
+    height: 18rem;
+
+}
+.card:hover{
+    transform: translateY(-6px);
+    box-shadow: 0 18px 40px rgba(0,0,0,0.25);
+}
+.card-icon{
+    font-size: 2.5rem;
 }
 
 @media screen and (max-width: 960px) {
@@ -60,31 +60,9 @@ body {
     }
 }
 
-/* navbar style */
-.navbar ul {
-    list-style-type: none;
-    background-color: hsl(0, 0%, 25%);
-    padding: 0px;
-    margin: 0px;
-    overflow: hidden;
-}
 
-.navbar a {
-    color: white;
-    display: block;
-    text-decoration: none;
-    padding: 15px;
-    text-align: center;
-}
-
-.navbar a:hover{
-    background-color: hsl(0, 0%, 10%);
-}
-
-.navbar li {
-    float: inline-start;
-}
 .footer-container{
+    
     position: fixed;
     height: 150px;
     bottom: 100px;
@@ -103,14 +81,27 @@ body {
 .slide.active{
     display: block;
 }
-.h2LO{
-    margin: 0;
 
-}
 
-.h2General{
+.h2Features{
+    font-family: "Segoe Script", serif;
+    color: rgba(70, 20, 61, 0.85);
     margin-top:50px;
     font-size: 25px;
+}
+
+@media (max-width: 480px) {
+    .footer-container {
+        position: static;
+        height: auto;
+        bottom: auto;
+
+    }
+    .h2Features{
+        font-size: 15px;
+
+    }
+
 }
 
 
