--- a/WebDev/5A-WebDev/styles/categories.css
+++ b/WebDev/5A-WebDev/styles/categories.css
@@ -1,22 +1,19 @@
-body{
-    background-image: url("/images/backgroud image.png");
+body {
+    background-image: url("../images/background.png");
     background-repeat: no-repeat;
     background-size: cover;
     font-family: "Segoe Script", serif;
-
 }
 
-.grid-container{
+.grid-container {
     display: grid;
     grid-template-rows: repeat(7,auto);
     grid-template-columns: 1fr;
     justify-items: center;
     row-gap: 20px;
-
-
 }
 
-.grid-container>div{
+.grid-container>div {
     border-radius: 30px;
     width: min(90%, 600px);
     padding: 0.2rem;
@@ -24,14 +21,13 @@ body{
     background: rgba(255, 255, 255, 0.25);
     backdrop-filter: blur(6px);
     box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-
 }
 
-.grid-container>div:hover{
+.grid-container>div:hover {
     box-shadow: 0 14px 50px rgba(0,0,0, 1);
 }
 
-.title{
+.title {
     color: rgba(43, 5, 38, 0.85);
     font-weight: 500;
     text-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
@@ -40,11 +36,11 @@ body{
 }
 
 
-.grid-container h2{
+.grid-container h2 {
     color: rgba(70, 20, 61, 0.85);
 }
 
-.miniAlert{
+.miniAlert {
     position: fixed;
     bottom: 350px;
     left: 50%;
@@ -60,7 +56,7 @@ body{
     z-index: 9999;
 }
 
-.back-arrow{
+.back-arrow {
     position: absolute;
     top:20px;
     left:20px;
@@ -68,7 +64,6 @@ body{
 }
 
 @media (max-width: 480px) {
-
     .title {
         font-size: 2.5rem;
     }
@@ -76,7 +71,4 @@ body{
         top:5px;
         left:5px;
     }
-
 }
-
-
