--- a/WebDev/5A-WebDev/styles/management.css
+++ b/WebDev/5A-WebDev/styles/management.css
@@ -1,13 +1,13 @@
-body{
-    background-image: url("/images/backgroud image.png");
+body {
+    background-image: url("../images/background.png");
     background-repeat: no-repeat;
     background-size: cover;
     font-family: "Times New Roman", serif;
     text-align: center;
     min-height: 100vh;
-
 }
-.container{
+
+.container {
     height: 80vh;
     display: flex;
     flex-direction: column;
@@ -15,16 +15,15 @@ body{
     justify-content: center;
     gap: 1rem;
     font-size: 1.8rem;
-
-
 }
-.back-arrow{
+
+.back-arrow {
     position: absolute;
     top:20px;
     left:20px;
 }
 
-h1{
+h1 {
     color: rgba(43, 5, 38, 0.85);
     font-weight: 500;
     text-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
@@ -43,13 +42,11 @@ h1{
         padding-left: 10px;
         padding-right: 10px;
     }
-    .back-arrow{
+    .back-arrow {
         top:5px;
         left:5px;
     }
-    input{
+    input {
         margin-left: 50px;
-
     }
-
 }
