--- a/WebDev/5A-WebDev/styles/recharge.css
+++ b/WebDev/5A-WebDev/styles/recharge.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("/images/backgroud image.png");
+    background-image: url("../images/background.png");
     background-repeat: no-repeat;
     background-size: cover;
     font-family: "Times New Roman", serif;
@@ -74,41 +74,40 @@ body{
 }
 
 .btn-primary {
-    background: linear-gradient(90deg, #7a00ff, #fc3de6);
-    color: white;
-    border: none;
-    padding: 15px 40px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 1.1em;
     transition: background 0.3s;
+    font-size: 1.1rem;
+    padding: 10px 24px;
+    border: none;
+    border-radius: 12px;
+    font-family: "Segoe Script", serif;
+    color: white;
+    cursor: pointer;
+    background: linear-gradient(90deg, #7a00ff, #fc3de6);
+    box-shadow: 0 6px 18px rgba(122, 0, 255, 0.4);
     width: 100%;
-    font-family: "Times New Roman", serif;
+    height: 50px;
 
 }
 
 .btn-primary:hover {
-    background: #5568d3;
+    box-shadow: 0 14px 50px rgba(0,0,0, 1);
 }
 
-.message {
-    margin-top: 20px;
-    padding: 15px;
-    border-radius: 8px;
-    text-align: center;
+.miniAlert{
+    position: fixed;
+    bottom: 70px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    background: rgba(40, 20, 70, 0.9);
+    color: white;
+    font-family: "Times New Roman", serif;
+    border-radius: 14px;
+    font-size: 14px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    z-index: 9999;
 }
 
-.message.success {
-    background: #d4edda;
-    color: #155724;
-    border: 1px solid #c3e6cb;
-}
-
-.message.error {
-    background: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
-}
 .back-arrow{
     position: absolute;
     top:20px;
