--- a/WebDev/5A-WebDev/styles/dashboard.css
+++ b/WebDev/5A-WebDev/styles/dashboard.css
@@ -9,25 +9,26 @@ body {
     text-align: center;
     box-sizing: border-box;
     padding: 0;
-    margin: 0; /* חשוב – מונע פס לבן */
+    margin: 0;
 }
 
-/* ===== Main container ===== */
+
 .container {
     max-width: 1500px;
     margin: auto;
     gap: 1em;
 }
 
-/* ===== Grid layout ===== */
+
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(5, 1fr);
+    /*grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));*/
     gap: 1rem;
     padding: 1rem;
 }
 
-/* ===== Cards ===== */
+
 .grid-container .card {
     color: rgba(43, 5, 38, 0.85);
     font-weight: 500;
@@ -40,8 +41,8 @@ body {
     backdrop-filter: blur(6px);
     box-shadow: 0 10px 30px rgba(0,0,0,0.15);
     transition: transform 0.25s ease, box-shadow 0.25s ease;
+    height: 18rem;
 
-    height: 18rem; /* נשאר לדסקטופ גדול */
 }
 
 .card:hover {
@@ -83,7 +84,7 @@ body {
     width: 100%;
 }
 
-/* ===== Footer / Slider area ===== */
+
 .footer-container {
     position: relative;
     height: 150px;
@@ -95,7 +96,7 @@ body {
     box-shadow: 0 10px 30px rgba(0,0,0,0.15);
 }
 
-/* ===== Slider ===== */
+
 .slide {
     display: none;
     height: 100%;
@@ -106,7 +107,7 @@ body {
     display: block;
 }
 
-/* ===== Text ===== */
+
 .h2Features {
     font-family: "Segoe Script", serif;
     color: rgba(70, 20, 61, 0.85);
@@ -130,11 +131,6 @@ body {
     margin-bottom: 20px;
 }
 
-
-
-/* =====================================================
-   📱 Mobile & Tablet
-===================================================== */
 @media (max-width: 768px) {
     .footer-container {
         height: auto;
